# neural-chaos-lab

./: .gitignore  README.md  pyproject.toml
chaos_lab/: cli.py  model.py  service.py  sim.py
neural_chaos_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_imports.py  test_service.py  test_systems.py
